Some changes before refactoring